console-setup (1.78) UNRELEASED; urgency=low

  * Updated translations:
    - Amharic (am.po)
    - Croatian (hr.po)

 -- Cyril Brulebois <kibi@debian.org>  Fri, 22 Jun 2012 12:01:49 +0200

console-setup (1.77) sid; urgency=low

  [ Updated translations ]
  * Amharic (am.po) by Tegegne Tefera
  * Welsh (cy.po) by Dafydd Tomos
  * Danish (da.po) by Joe Hansen
  * Basque (eu.po) by Piarres Beobide
  * Galician (gl.po) by Jorge Barreiro
  * Hungarian (hu.po) by SZERVÁC Attila
  * Lao (lo.po) by Anousak Souphavanh
  * Lithuanian (lt.po) by Rimas Kudelis
  * Latvian (lv.po) by Rūdolfs Mazurs
  * Marathi (mr.po) by sampada
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Romanian (ro.po) by ioan-eugen stan
  * Slovenian (sl.po) by Vanja Cvelbar
  * Tamil (ta.po) by Kumar Appaiah
  * Uyghur (ug.po) by Sahran

 -- Julien Cristau <jcristau@debian.org>  Fri, 15 Jun 2012 19:22:55 +0200

console-setup (1.76) unstable; urgency=low

  [ Peter Eisentraut ]
  * Added support for "status" action to init scripts, closes: #651461.

  [ Samuel Thibault ]
  * Remove kbdnames.gz from console-setup-udeb, it is not used any more.

  [ Christian Perrier ]
  * Add Sindhi as "pk(snd)" to the list of keymap choices
  * Change "Slovakian" (incorrect spelling) to "Slovak"
  * Change "Slovene" (incorrect spelling) to "Slovenian"

  [ Samuel Thibault ]
  * Fix Norwegian Nynorsk vs Persian keymap inversion. Closes: #665874.

  [ Robert Millan ]
  * Add Catalan to the list of languages that can be represented with
    Lat15. Closes: #667986

  [ Anton Zinoviev ]
  * setupcon: exit with error message if the kernel is neither Linux, nor
    FreeBSD.
  * setupcon: do not load font with UTF-8 on FreeBSD (the support of UTF-8
    on FreeBSD is very limited).  Thanks to Robert Millan, closes: #666542
  * Only include the debconf-selectable layouts in the udebs.  Based on a
    patch by Samuel Thibault with changes.  Closes: #658668.
  * config: handle XkbLayout of the form us(intl),cz(qwerty) when guesing