@@ -2,6 +2,11 @@
 
 SHELL = /bin/bash
 
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  MAKEFLAGS += -j$(NUMJOBS)
+endif
+
 xkbdir = /usr/share/X11/xkb
 export xkbdir
 pre = debian/preprocessor
